test_data/Xml/Unexpected/Unserializable/InvalidClassName/reference/wrong.xml.exception
Expected an element representing an instance of class Reference with element name reference, but got: utterlyInvalid at: the beginning